// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button ButtonLoadingContainerStyled 样式组件快照 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  width: 20px;
  height: 20px;
  margin-right: 8px;
  opacity: 1;
  overflow: hidden;
  -webkit-transition: width 0.2s ease 0s,opacity 0.4s ease 0.2s, margin-right 0.3s ease 0s;
  transition: width 0.2s ease 0s,opacity 0.4s ease 0.2s, margin-right 0.3s ease 0s;
}

<span
    class="c0"
    loading="1"
  />
</DocumentFragment>
`;

exports[`button ButtonStyled 样式组件快照 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  outline: none;
  border: 0px;
  margin: 0px;
  border-radius: 4px;
  padding: 6px 10px;
  background: #fff;
  cursor: pointer;
  color: #484646;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #ddd;
}

<button
    class="c0"
    type="button"
  />
</DocumentFragment>
`;

exports[`button button 快照 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  outline: none;
  border: 0px;
  margin: 0px;
  border-radius: 4px;
  padding: 6px 10px;
  background: #fff;
  cursor: pointer;
  color: #484646;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #ddd;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  width: 0;
  height: 20px;
  margin-right: 0;
  opacity: 0;
  overflow: hidden;
  -webkit-transition: width 0.2s ease 0s,opacity 0.4s ease 0.2s, margin-right 0.3s ease 0s;
  transition: width 0.2s ease 0s,opacity 0.4s ease 0.2s, margin-right 0.3s ease 0s;
}

.c3 {
  margin-right: 5px;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
}

.c4 {
  fill: none;
  stroke: rgb(72 113 255);
  stroke-width: 2;
  stroke-linecap: round;
  stroke-dasharray: 25,25;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  -webkit-animation: iIeKRO 2.3s ease-out infinite;
  animation: iIeKRO 2.3s ease-out infinite;
}

<button
    class="c0"
    type="button"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        loading="0"
      >
        <svg
          class="c3"
          height="20"
          width="20"
        >
          <circle
            class="c4"
            cx="10"
            cy="10"
            r="8"
          />
        </svg>
      </span>
      测试
    </div>
  </button>
</DocumentFragment>
`;
